Fix [UI] Icons width changes on small screen resolution (#3184)

--- a/src/elements/ProjectsMonitoringCounters/projectsMonitoringCounters.scss
+++ b/src/elements/ProjectsMonitoringCounters/projectsMonitoringCounters.scss
@@ -76,7 +76,6 @@
 
   .project-card__info {
     display: flex;
-    align-items: baseline;
     align-items: center;
     justify-content: flex-end;
     margin-left: 1rem;
